<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintBottom_toBottomOf="parent"

    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:id="@+id/newPhoto"
        android:layout_width="wrap_content"
        android:layout_height="144dp"
        android:contentDescription="@string/recipeFoto"
        android:src="@drawable/food_fo_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/fab_margin"
        android:scaleType="centerCrop"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:hint="@string/name"
        android:textSize="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPhoto">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newRecipeName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:hint="@string/author"
        app:layout_constraintTop_toBottomOf="@id/textFieldName">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/newAuthor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldComponents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:hint="@string/components"
        app:layout_constraintTop_toBottomOf="@id/textFieldAuthor">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/newComponents"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pictureButton"
        app:layout_constraintTop_toBottomOf="@+id/textFieldComponents"
        app:layout_constraintBottom_toTopOf="@+id/textViewCategorySelect"
        app:layout_constraintStart_toStartOf="parent"
        app:icon="@drawable/ic_add_a_photo_24dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewCategorySelect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:textSize="28dp"
        android:text="@string/categorySelect"
        app:layout_constraintTop_toBottomOf="@id/buttonPicture"
        app:layout_constraintStart_toStartOf="parent"
        />

    <RadioGroup
        android:id="@+id/radioGroupCategory"
        android:checkedButton="@+id/radio_button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewCategorySelect"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_1"/>
        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_2"/>
        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_3"/>
        <RadioButton
            android:id="@+id/radio_button_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_4"/>
        <RadioButton
            android:id="@+id/radio_button_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_5"/>
        <RadioButton
            android:id="@+id/radio_button_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_6"/>
        <RadioButton
            android:id="@+id/radio_button_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mediterranean"/>
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSteps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:textSize="28dp"
        android:text="@string/cooking_steps"
        app:layout_constraintTop_toBottomOf="@id/radioGroupCategory"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stepsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSteps"
        tools:listitem="@layout/step_list_show" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardAddStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepsRecyclerView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/newStepNumber"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:background="@drawable/ic_circle_24dp"
                android:contentDescription="@string/photo_of_step"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


            <EditText
                android:id="@+id/newStep"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                app:layout_constraintEnd_toStartOf="@+id/addStep"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/newStepNumber"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/addStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:src="@drawable/ic_baseline_add_circle_24"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/newStep"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:text="@string/label_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardAddStep" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"/>


</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>