<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_main"
    app:startDestination="@id/fragment_feed">
    <fragment android:id="@+id/fragment_feed"
        android:label="@string/feed"
        android:name="ru.netology.cookbook.activity.FeedFragment" >
        <action
            android:id="@+id/action_fragment_feed_to_fragment_filter"
            app:destination="@id/fragment_favorite" />
        <action
            android:id="@+id/action_fragment_feed_to_fragment_add"
            app:destination="@id/fragment_add" />
        <action
            android:id="@+id/action_fragment_feed_to_recipeFragment2"
            app:destination="@id/recipeFragment2" />
    </fragment>

    <fragment android:id="@+id/fragment_favorite"
        android:label="@string/favorite"
        android:name="ru.netology.cookbook.activity.FavoriteFragment" >
        <action
            android:id="@+id/action_fragment_favorite_to_recipeFragment2"
            app:destination="@id/recipeFragment2" />
    </fragment>

    <fragment android:id="@+id/fragment_add"
        android:label="@string/add"
        android:name="ru.netology.cookbook.activity.AddFragment" />
    <fragment
        android:id="@+id/recipeFragment2"
        android:name="ru.netology.cookbook.activity.RecipeFragment"
        android:label="RecipeFragment" >
        <action
            android:id="@+id/action_recipeFragment2_to_editFragment"
            app:destination="@id/editFragment" />
        <action
            android:id="@+id/action_recipeFragment2_to_fragment_feed"
            app:destination="@id/fragment_feed" />
    </fragment>
    <fragment
        android:id="@+id/editFragment"
        android:name="ru.netology.cookbook.activity.EditFragment"
        android:label="EditFragment" >
        <action
            android:id="@+id/action_editFragment_to_fragment_feed"
            app:destination="@id/fragment_feed" />
    </fragment>

</navigation>